[tool.poetry]
name = "propn-identification"
version = "0.1.0"
description = ""
authors = ["krushna Panchvishe <krushnap@cdac.in>"]
readme = "README.md"
packages = [{include = "propn_identification"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
